--- a/WebContent/files/account_page/styles.css
+++ b/WebContent/files/account_page/styles.css
@@ -2514,3 +2514,21 @@ body {
   width:1px;
   height:1px;
 }
+
+.gameInList{
+  position:absolute;
+  padding-right:20px;
+  padding-left:20px;
+  width:180px;
+  height:240px;
+}
+.imgInList{
+  position:absolute;
+  width:180px;
+  height:240px;
+}
+#gameList{
+	position: absolute;
+	left:0px;
+	top:792px;
+}
