--- a/WebContent/files/account_page/styles.css
+++ b/WebContent/files/account_page/styles.css
@@ -2585,3 +2585,33 @@ body {
   word-wrap:break-word;
    font-size:40px;
 }
+#logOutBgr {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:261px;
+  height:63px;
+  background:inherit;
+  background-color:rgba(22, 155, 213, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+}
+#logOut {
+  position:absolute;
+  left:800px;
+  top:1445px;
+  width:261px;
+  height:63px;
+  font-size:20px;
+}
+#logOutText {
+  position:absolute;
+  left:2px;
+  top:20px;
+  width:257px;
+  word-wrap:break-word;
+}
