Changed all position of overlay to be relative to their parents

--- a/WebContent/files/account_page/styles.css
+++ b/WebContent/files/account_page/styles.css
@@ -2813,6 +2813,11 @@ body {
   visibility:hidden;
 }
 #centerBox{
+  position:absolute;
+  left:226px;
+  top:325px;
+  width:748px;
+  height:437px;
 }
 #paymentBoxdiv {
   position:absolute;
@@ -2831,8 +2836,6 @@ body {
 }
 #paymentBox {
   position:absolute;
-  left:226px;
-  top:325px;
   width:748px;
   height:437px;
   visibility:hidden;
@@ -2857,8 +2860,8 @@ body {
 }
 #boxHeader {
   position:absolute;
-  left:442px;
-  top:391px;
+  left:216px;
+  top:66px;
   width:316px;
   height:37px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -2875,7 +2878,12 @@ body {
   visibility:inherit;
 }
 #addPayment{
-	visibility:hidden;
+  position:absolute;
+  left:166px;
+  top:300px;
+  width:500px;
+  height:50px;
+  visibility:hidden;
 }
 #plusSignimg {
   position:absolute;
@@ -2887,8 +2895,6 @@ body {
 }
 #plusSign {
   position:absolute;
-  left:392px;
-  top:553px;
   width:50px;
   height:50px;
   visibility:inherit;
@@ -2911,8 +2917,8 @@ body {
 }
 #addNew {
   position:absolute;
-  left:490px;
-  top:563px;
+  left:98px;
+  top:10px;
   width:233px;
   height:40px;
   font-size:20px;
@@ -2944,8 +2950,8 @@ body {
 }
 #paymentOK {
   position:absolute;
-  left:530px;
-  top:660px;
+  left:300px;
+  top:375px;
   width:140px;
   height:40px;
   font-size:20px;
@@ -2959,8 +2965,17 @@ body {
   word-wrap:break-word;
   visibility:inherit;
 }
+#payments{
+  position:absolute;
+  left:130px;
+  top:130px;
+  width:500px
+}
 .payment{
-	visibility:hidden;'
+  position: absolute;
+  visibility:hidden;
+  width:500px;
+  height:55px;
 }
 .cardTypeimg {
   position:absolute;
@@ -2972,8 +2987,6 @@ body {
 }
 .cardType {
   position:absolute;
-  left:375px;
-  top:475px;
   width:84px;
   height:55px;
   visibility:inherit;
@@ -2983,7 +2996,7 @@ body {
   left:0px;
   top:0px;
   width:210px;
-  height:89px;
+  height:55px;
   background:inherit;
   background-color:rgba(153, 153, 153, 1);
   border:none;
@@ -2996,19 +3009,19 @@ body {
 }
 .cardName {
   position:absolute;
-  left:501px;
-  top:464px;
+  left:125px;
+  top:0px;
   width:210px;
-  height:89px;
-  font-size:20px;
+  height:55px;
   visibility:inherit;
 }
 .cardNameText {
   position:absolute;
   left:2px;
-  top:32px;
+  top:17px;
   width:206px;
   word-wrap:break-word;
+  font-size:20px;
   visibility:inherit;
 }
 .cardEditdiv {
@@ -3016,7 +3029,7 @@ body {
   left:0px;
   top:0px;
   width:73px;
-  height:24px;
+  height:25px;
   background:inherit;
   background-color:rgba(22, 155, 213, 1);
   border:none;
@@ -3028,10 +3041,10 @@ body {
 }
 .cardEdit {
   position:absolute;
-  left:731px;
-  top:497px;
+  left:350px;
+  top:20px;
   width:73px;
-  height:24px;
+  height:25px;
   visibility:inherit;
 }
 .cardEditText {
@@ -3047,7 +3060,7 @@ body {
   left:0px;
   top:0px;
   width:73px;
-  height:24px;
+  height:25px;
   background:inherit;
   background-color:rgba(22, 155, 213, 1);
   border:none;
@@ -3059,10 +3072,10 @@ body {
 }
 .cardRemove {
   position:absolute;
-  left:814px;
-  top:497px;
+  left:440px;
+  top:20px;
   width:73px;
-  height:24px;
+  height:25px;
    visibility:inherit;
 }
 .cardRemoveText {
