--- a/WebContent/files/account_page/styles.css
+++ b/WebContent/files/account_page/styles.css
@@ -2823,8 +2823,8 @@ body {
   position:absolute;
   left:0px;
   top:0px;
-  width:748px;
-  height:437px;
+  width:inherit;
+  height:inherit;
   background:inherit;
   background-color:rgba(153, 153, 153, 1);
   border:none;
@@ -2836,8 +2836,8 @@ body {
 }
 #paymentBox {
   position:absolute;
-  width:748px;
-  height:437px;
+  width:750px;
+  height:430px;
   visibility:hidden;
 }
 #boxHeaderdiv {
@@ -2881,7 +2881,7 @@ body {
   position:absolute;
   left:166px;
   top:300px;
-  width:500px;
+  width:400px;
   height:50px;
   visibility:hidden;
 }
