--- a/WebContent/files/account_page/styles.css
+++ b/WebContent/files/account_page/styles.css
@@ -3122,7 +3122,7 @@ body {
 
 #addPaymentForm{
   position:absolute;
-  left:20px;
+  left:175px;
   top:100px;
   visibility:hidden;
 }
@@ -3163,39 +3163,57 @@ body {
   visibility:inherit;
 }
 .rftext {
-  width:500px;
+  width:200px;
   height:25px;
   word-wrap:break-word;
   visibility:inherit;
 }
 #rf1text {
   position:absolute;
-  width:200px;
+  width:60px;
   height:30px;
   font-size:20px;
   visibility:inherit;
+}
+#rf1textbox{
+  width:60px;
 }
 #rf2text {
   position:absolute;
   top:40px;
-  width:200px;
+  width:100px;
   height:30px;
   font-size:20px;
   visibility:inherit;
 }
-#rf3text {
+#rf31text {
   position:absolute;
   top:80px;
-  width:200px;
+  width:60px;
   height:30px;
   font-size:20px;
   visibility:inherit;
 }
-#rf4text {
+#rf32text {
+  position:absolute;
+  top:80px;
+  left: 70px;
+  width:60px;
+  height:30px;
+  font-size:20px;
+  visibility:inherit;
+}
+#rf31textbox{
+  width:60px;
+}
+#rf32textbox{
+  width:60px;
+}
+#rf4textbox {
   position:absolute;
   top:120px;
-  width:200px;
-  height:30px;
+  width:60px;
+  height:20px;
   font-size:20px;
   visibility:inherit;
 }
