new edition of about page

--- a/WebContent/files/about/styles.css
+++ b/WebContent/files/about/styles.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
   margin:0px;
   background-image:none;
   position:static;
@@ -460,7 +460,7 @@
   left:0px;
   top:0px;
   width:1339px;
-  height:437px;
+  height:1042px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   border:none;
@@ -474,12 +474,12 @@
   left:0px;
   top:164px;
   width:1339px;
-  height:437px;
+  height:1042px;
 }
 #u1105 {
   position:absolute;
   left:2px;
-  top:210px;
+  top:513px;
   width:1335px;
   visibility:hidden;
   word-wrap:break-word;
@@ -501,8 +501,8 @@
 }
 #u1106 {
   position:absolute;
-  left:199px;
-  top:163px;
+  left:377px;
+  top:164px;
   width:586px;
   height:84px;
   font-size:48px;
@@ -540,8 +540,9 @@
 #u1109 {
   position:absolute;
   left:2px;
-  top:14px;
+  top:30px;
   width:373px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u1110_div {
@@ -570,8 +571,9 @@
 #u1111 {
   position:absolute;
   left:2px;
-  top:8px;
+  top:12px;
   width:296px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u1112_div {
@@ -600,8 +602,9 @@
 #u1113 {
   position:absolute;
   left:2px;
-  top:23px;
+  top:27px;
   width:665px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u1114_div {
@@ -630,16 +633,17 @@
 #u1115 {
   position:absolute;
   left:2px;
-  top:6px;
+  top:10px;
   width:808px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u1116_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:831px;
-  height:35px;
+  width:1160px;
+  height:894px;
   background:inherit;
   background-color:rgba(242, 242, 242, 1);
   border:none;
@@ -648,27 +652,29 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:20px;
+  text-align:left;
 }
 #u1116 {
   position:absolute;
   left:114px;
-  top:516px;
-  width:831px;
-  height:35px;
+  top:234px;
+  width:1160px;
+  height:894px;
   font-size:20px;
+  text-align:left;
 }
 #u1117 {
   position:absolute;
   left:2px;
-  top:6px;
-  width:827px;
+  top:51px;
+  width:1156px;
   word-wrap:break-word;
 }
 #u1118_div {
   position:absolute;
   left:0px;
   top:0px;
-  width:1345px;
+  width:1339px;
   height:271px;
   background:inherit;
   background-color:rgba(215, 215, 215, 1);
@@ -680,16 +686,16 @@
 }
 #u1118 {
   position:absolute;
-  left:-6px;
-  top:601px;
-  width:1345px;
+  left:0px;
+  top:1206px;
+  width:1339px;
   height:271px;
 }
 #u1119 {
   position:absolute;
   left:2px;
   top:128px;
-  width:1341px;
+  width:1335px;
   visibility:hidden;
   word-wrap:break-word;
 }
@@ -712,8 +718,8 @@
 }
 #u1120 {
   position:absolute;
-  left:330px;
-  top:835px;
+  left:336px;
+  top:1440px;
   width:519px;
   height:37px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -746,8 +752,8 @@
 }
 #u1122 {
   position:absolute;
-  left:42px;
-  top:624px;
+  left:48px;
+  top:1229px;
   width:157px;
   height:37px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -780,8 +786,8 @@
 }
 #u1124 {
   position:absolute;
-  left:42px;
-  top:671px;
+  left:48px;
+  top:1276px;
   width:79px;
   height:22px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -797,8 +803,8 @@
 }
 #u1124_ref {
   position:absolute;
-  left:113px;
-  top:683px;
+  left:119px;
+  top:1288px;
   width:1px;
   height:1px;
 }
@@ -821,8 +827,8 @@
 }
 #u1126 {
   position:absolute;
-  left:41px;
-  top:693px;
+  left:47px;
+  top:1298px;
   width:157px;
   height:22px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -838,8 +844,8 @@
 }
 #u1126_ref {
   position:absolute;
-  left:190px;
-  top:705px;
+  left:196px;
+  top:1310px;
   width:1px;
   height:1px;
 }
@@ -862,8 +868,8 @@
 }
 #u1128 {
   position:absolute;
-  left:41px;
-  top:713px;
+  left:47px;
+  top:1318px;
   width:152px;
   height:22px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -879,8 +885,8 @@
 }
 #u1128_ref {
   position:absolute;
-  left:185px;
-  top:725px;
+  left:191px;
+  top:1330px;
   width:1px;
   height:1px;
 }
@@ -903,8 +909,8 @@
 }
 #u1130 {
   position:absolute;
-  left:41px;
-  top:735px;
+  left:47px;
+  top:1340px;
   width:125px;
   height:22px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -920,8 +926,8 @@
 }
 #u1130_ref {
   position:absolute;
-  left:158px;
-  top:747px;
+  left:164px;
+  top:1352px;
   width:1px;
   height:1px;
 }
@@ -944,8 +950,8 @@
 }
 #u1132 {
   position:absolute;
-  left:41px;
-  top:757px;
+  left:47px;
+  top:1362px;
   width:148px;
   height:22px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -961,8 +967,8 @@
 }
 #u1132_ref {
   position:absolute;
-  left:181px;
-  top:769px;
+  left:187px;
+  top:1374px;
   width:1px;
   height:1px;
 }
@@ -985,8 +991,8 @@
 }
 #u1134 {
   position:absolute;
-  left:350px;
-  top:624px;
+  left:356px;
+  top:1229px;
   width:274px;
   height:37px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1019,8 +1025,8 @@
 }
 #u1136 {
   position:absolute;
-  left:358px;
-  top:671px;
+  left:364px;
+  top:1276px;
   width:230px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1053,8 +1059,8 @@
 }
 #u1138 {
   position:absolute;
-  left:360px;
-  top:693px;
+  left:366px;
+  top:1298px;
   width:90px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1087,8 +1093,8 @@
 }
 #u1140 {
   position:absolute;
-  left:358px;
-  top:715px;
+  left:364px;
+  top:1320px;
   width:92px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1121,8 +1127,8 @@
 }
 #u1142 {
   position:absolute;
-  left:358px;
-  top:737px;
+  left:364px;
+  top:1342px;
   width:103px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1155,8 +1161,8 @@
 }
 #u1144 {
   position:absolute;
-  left:358px;
-  top:757px;
+  left:364px;
+  top:1362px;
   width:38px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1189,8 +1195,8 @@
 }
 #u1146 {
   position:absolute;
-  left:358px;
-  top:781px;
+  left:364px;
+  top:1386px;
   width:174px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1223,8 +1229,8 @@
 }
 #u1148 {
   position:absolute;
-  left:358px;
-  top:801px;
+  left:364px;
+  top:1406px;
   width:147px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1257,8 +1263,8 @@
 }
 #u1150 {
   position:absolute;
-  left:736px;
-  top:624px;
+  left:742px;
+  top:1229px;
   width:166px;
   height:37px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1281,8 +1287,8 @@
 }
 #u1152 {
   position:absolute;
-  left:736px;
-  top:676px;
+  left:742px;
+  top:1281px;
   width:51px;
   height:39px;
 }
@@ -1313,8 +1319,8 @@
 }
 #u1154 {
   position:absolute;
-  left:798px;
-  top:685px;
+  left:804px;
+  top:1290px;
   width:211px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1337,8 +1343,8 @@
 }
 #u1156 {
   position:absolute;
-  left:736px;
-  top:737px;
+  left:742px;
+  top:1342px;
   width:51px;
   height:50px;
 }
@@ -1369,8 +1375,8 @@
 }
 #u1158 {
   position:absolute;
-  left:798px;
-  top:751px;
+  left:804px;
+  top:1356px;
   width:195px;
   height:44px;
   font-family:'Arial Negreta', 'Arial Normal', 'Arial';
@@ -1708,5 +1714,177 @@
   left:2px;
   top:9px;
   width:187px;
+  word-wrap:break-word;
+}
+
+#u182_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:191px;
+  height:51px;
+  background:inherit;
+  background-color:rgba(39, 63, 82, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:28px;
+  text-decoration:underline;
+}
+#u182 {
+  position:absolute;
+  left:512px;
+  top:42px;
+  width:191px;
+  height:51px;
+  font-size:28px;
+  text-decoration:underline;
+}
+#u183 {
+  position:absolute;
+  left:2px;
+  top:9px;
+  width:187px;
+  word-wrap:break-word;
+}
+#u184_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:99px;
+  height:25px;
+  background:inherit;
+  background-color:rgba(68, 68, 68, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u184 {
+  position:absolute;
+  left:1227px;
+  top:10px;
+  width:99px;
+  height:25px;
+}
+#u185 {
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:95px;
+  word-wrap:break-word;
+}
+#u186 {
+  position:absolute;
+  left:790px;
+  top:10px;
+  width:157px;
+  height:25px;
+}
+#u186_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u187 {
+  position:absolute;
+  left:1057px;
+  top:10px;
+  width:160px;
+  height:25px;
+}
+#u187_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u188 {
+  position:absolute;
+  left:884px;
+  top:56px;
+  width:310px;
+  height:25px;
+}
+#u188_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:310px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u44 {
+  position:absolute;
+  left:687px;
+  top:5px;
+  width:103px;
+  height:41px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u45 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:99px;
+  word-wrap:break-word;
+}
+#u46_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:41px;
+  background:inherit;
+  background-color:rgba(39, 63, 82, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u46 {
+  position:absolute;
+  left:957px;
+  top:5px;
+  width:100px;
+  height:41px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u47 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
   word-wrap:break-word;
 }
