--- a/WebContent/files/customer_service/styles.css
+++ b/WebContent/files/customer_service/styles.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
   margin:0px;
   background-image:none;
   position:static;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u186_div {
+#u1866_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -26,14 +26,14 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u186 {
+#u1866 {
   position:absolute;
   left:0px;
   top:160px;
   width:1339px;
   height:592px;
 }
-#u187 {
+#u1877 {
   position:absolute;
   left:2px;
   top:288px;
@@ -41,7 +41,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u188_div {
+#u1888_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -55,14 +55,14 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u188 {
+#u1888 {
   position:absolute;
   left:272px;
   top:267px;
   width:832px;
   height:351px;
 }
-#u189 {
+#u1899 {
   position:absolute;
   left:0px;
   top:0px;
@@ -1396,5 +1396,177 @@
   left:2px;
   top:9px;
   width:187px;
+  word-wrap:break-word;
+}
+
+#u182_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:191px;
+  height:51px;
+  background:inherit;
+  background-color:rgba(39, 63, 82, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:28px;
+  text-decoration:underline;
+}
+#u182 {
+  position:absolute;
+  left:512px;
+  top:42px;
+  width:191px;
+  height:51px;
+  font-size:28px;
+  text-decoration:underline;
+}
+#u183 {
+  position:absolute;
+  left:2px;
+  top:9px;
+  width:187px;
+  word-wrap:break-word;
+}
+#u184_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:99px;
+  height:25px;
+  background:inherit;
+  background-color:rgba(68, 68, 68, 1);
+  border:none;
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u184 {
+  position:absolute;
+  left:1227px;
+  top:10px;
+  width:99px;
+  height:25px;
+}
+#u185 {
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:95px;
+  word-wrap:break-word;
+}
+#u186 {
+  position:absolute;
+  left:790px;
+  top:10px;
+  width:157px;
+  height:25px;
+}
+#u186_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:157px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u187 {
+  position:absolute;
+  left:1057px;
+  top:10px;
+  width:160px;
+  height:25px;
+}
+#u187_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:160px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u188 {
+  position:absolute;
+  left:884px;
+  top:56px;
+  width:310px;
+  height:25px;
+}
+#u188_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:310px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u44 {
+  position:absolute;
+  left:687px;
+  top:5px;
+  width:103px;
+  height:41px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u45 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:99px;
+  word-wrap:break-word;
+}
+#u46_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:41px;
+  background:inherit;
+  background-color:rgba(39, 63, 82, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u46 {
+  position:absolute;
+  left:957px;
+  top:5px;
+  width:100px;
+  height:41px;
+  font-size:20px;
+  color:#FFFFFF;
+}
+#u47 {
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:96px;
   word-wrap:break-word;
 }
